# nous

./: README.md  check_torch.py  data.csv  pyproject.toml
demos/: benchmark_caching.py  benchmark_turbo.py  demo_algorithmic_learning.py  demo_arc_solver.py  demo_autonomous_calculus.py  demo_big_data.py  demo_book_retrieval.py  demo_data_science.py  demo_differentiability_stress_test.py  demo_hardened_security.py  demo_llm_workspace.py  demo_logic_solver.py  demo_multivariate_calculus.py  demo_neural_landing.py  demo_optimization.py  demo_program_synthesis.py  demo_rag_agent.py  demo_register_machine.py  demo_siglip2_understanding.py  demo_step_by_step_reasoning.py  demo_text_memory.py  demo_v3_recursion.py  demo_v3_ste_loops.py
docs/: architecture.md  soft_logic.md
experiments/gemma_nous/: model.py  train_gemma.py
nous/: __init__.py  arc.py  debugger.py  engine.py  expression.py  geometry.py  interpreter.py  llm.py  memory.py  security_policy.py  symbolic.py  workspace.py
nous.egg-info/: PKG-INFO  SOURCES.txt
scripts/: benchmark_gpu_colab.py  count_params.py  evaluate.py  export_model.py
tests/: robustness_log.txt  test_arc_robustness.py  test_cat_grad.py  test_grad_isolated.py  test_security.py  test_soft_logic.py  test_strings_io.py  test_symbolic.py  test_transcendental_expansion.py  test_v3_dsl.py  verify.py
